--- a/tictactoe.html
+++ b/tictactoe.html
@@ -22,11 +22,11 @@
             <div class="square" data-num="8"></div>
         </div>
         <div class="players">
-            <h3 class="player1">Player 1</h3>
+            <h3 class="player1 currentPlayer">Player 1</h3>
             <h3 class="player2">Player 2</h3>
         </div>
         <h2 class="gameStatus"></h2>
-        <button class="reset">reset</button>
+        <button class="reset">new game</button>
     </section>
     <script src="tictac.js"></script>
 </body>
