--- a/tictactoe.html
+++ b/tictactoe.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="ticstyle.css">
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+    <script src="sounds.js" type="text/javascript"></script>
 </head>
 <body>
     <section>
